[package]
name = "leptos_sync_ssr"
version = "0.0.1"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
license = "MIT"
repository = "https://github.com/metatoaster/leptos_sync_ssr"
description = "A helper for the Leptos Rust web framework for synchronizing server-side resources"
readme = "README.md"
rust-version = "1.80"
edition = "2021"

[dependencies]
leptos = { version = "0.8.0-beta" }
serde = { version = "1", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

document-features = { version = "0.2.0", optional = true }

[features]
default = []
## Enables the portlet module.
portlet = [
    "dep:serde",
]
## Provides the ready signal under server-side rendering.
ssr = [
    "leptos/ssr",
    "dep:tokio",
]

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
