[package]
name = "leptos_sync_ssr"
version = "0.1.0-beta2"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
license = "MIT"
repository = "https://github.com/metatoaster/leptos_sync_ssr"
description = "A helper for the Leptos Rust web framework for synchronizing server-side resources"
readme = "README.md"
rust-version = "1.80"
edition = "2021"

[dependencies]
leptos = { version = "0.8.2" }
serde = { version = "1" }
tokio = { version = "1", features = ["sync", "time"], optional = true }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
any_spawner = { version = "0.3.0", features = ["tokio"] }
anyhow = { version = "1" }
futures = { version = "0.3" }
leptos_router = { version = "0.8.2" }
reactive_graph = { version = "0.2.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-test = { version = "0.4.0" }

[features]
default = []
## Enables the portlet module.
portlet = []
## Provides the ready signal under server-side rendering.
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "dep:tokio",
]

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
